@@ -129,12 +129,12 @@ FACILITY(ENHANCED_DAT,     0, /*Z390*/   NONE,      Z390,          ALS2|ALS3)
 FACILITY(SENSE_RUN_STATUS, Z390,         NONE,      Z390,          ALS2|ALS3)
 FACILITY(CONDITIONAL_SSKE, Z390,         NONE,      Z390,          ALS2|ALS3)
 FACILITY(CONFIG_TOPOLOGY,  Z390,         NONE,      Z390,          ALS2|ALS3)
-FACILITY(IPTE_RANGE,       NONE,         NONE,      Z390,          ALS3)
+FACILITY(IPTE_RANGE,       Z390,         NONE,      Z390,          ALS3)
 FACILITY(NONQ_KEY_SET,     NONE,         NONE,      Z390,          ALS3)
 FACILITY(TRAN_FAC2,        ESA390|ZARCH, NONE,      ESA390|ZARCH,  ALS2|ALS3)
 FACILITY(MSG_SECURITY,     ESA390|ZARCH, NONE,      ESA390|ZARCH,  ALS2|ALS3)
 FACILITY(LONG_DISPL_INST,  Z390,         NONE,      Z390,          ALS2|ALS3)
-FACILITY(LONG_DISPL_HPERF, Z390,         NONE,      ZARCH,         ALS2|ALS3)
+FACILITY(LONG_DISPL_HPERF, ZARCH,        NONE,      ZARCH,         ALS2|ALS3)
 FACILITY(HFP_MULT_ADD_SUB, ESA390|ZARCH, NONE,      ESA390|ZARCH,  ALS2|ALS3)
 FACILITY(EXTENDED_IMMED,   Z390,         NONE,      Z390,          ALS2|ALS3)
 FACILITY(TRAN_FAC3,        Z390,         NONE,      Z390,          ALS2|ALS3)
