@@ -804,6 +804,7 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Enhanced-Monitor Facility
 <li>Reset-Reference-Bits-Multiple Facility
 <li>Load-Program-Parameter Facility
+<li>IPTE-Range Facility
 </ul>
 
 <P>The following optional features of z/Architecture have not yet been implemented:</P>
@@ -815,7 +816,6 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>CPU-Measurement Counter Facility
 <li>CPU-Measurement Sampling Facility
 <li>Floating-Point-Extension Facility
-<li>IPTE-Range Facility
 <li>Nonquiescing Key-Setting Facility
 </ul>
 
